abrindo paginas em abas vazias
após adicionar links para as redes sociais, adicionou-se o direcionamento para que fossem abertas em paginas vazias.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <h1>Luiz Filipe dos Santos Paula</h1>
       <h2>Front-end Developer</h2>
       <div class="social-media">
-        <a href="https://www.linkedin.com/in/luizfii/">Linkedin</a>
-        <a href="https://github.com/Luizfii">Github</a>
+        <a href="https://www.linkedin.com/in/luizfii/" target="_blank">Linkedin</a>
+        <a href="https://github.com/Luizfii" target="_blank">Github</a>
       </div>
     </header>
     <main class="container">
