--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <div class="menu-items">
               <ul>
                 <li>
-                  <a href="#">Home</a>
+                  <a href="#Home">Home</a>
                 </li>
                 <li>
-                  <a href="#">Sobre</a>
+                  <a href="#Sobre">Sobre</a>
                 </li>
                 <li>
-                  <a href="#">Projetos</a>
+                  <a href="#Projetos">Projetos</a>
                 </li>
               </ul>
             </div>
