--- a/index.html
+++ b/index.html
@@ -42,45 +42,59 @@
         <a href="https://github.com/Luizfii" target="_blank">Github</a>
       </div>
     </header>
+    <div class="#Projetos">
     <main class="container">
       <div class="card-container">
-         <div class="card">
-          <div class="card-wrapper">
-            <h2>Github</h2>
-            <p>Veja meus projetos</p>
-          </div>
+        <div class="card" >
+            <iframe  src="https://www.youtube.com/embed/pHrcVQ5p0-8"
+               title="YouTube video player" 
+               frameborder="0" 
+               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+               allowfullscreen></iframe>
         </div>
         <div class="card-text">
-            Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+          <h2>Calculadora Simples</h2>
+            Este Projeto foi criado seguindo um tutorial simples no 
+            Youtube para criação de uma calculadora com as quatro operações e
+            que fosse também responsivo. Fica bem legal de usar no celular, tenta aí. 
+            <a href="https://luizfii.github.io/calculadora_Simples/" 
+             target="_blank">Click aqui</a>
         </div>
       </div>
         <div class="card-container">
           <div class="card-text">
-            Ao contrário do que se acredita, Lorem Ipsum não é simplesmente um texto randômico. Com mais de 2000 anos, suas raízes podem ser encontradas em uma obra de literatura latina clássica datada de 45 AC. Richard McClintock, um professor de latim do Hampden-Sydney College na Virginia, pesquisou uma das mais obscuras palavras em latim, consectetur, oriunda de uma passagem de Lorem Ipsum, e, procurando por entre citações da palavra na literatura clássica, descobriu a sua indubitável origem. Lorem Ipsum vem das seções 1.10.32 e 1.10.33 do "de Finibus Bonorum et Malorum" (Os Extremos do Bem e do Mal), de Cícero, escrito em 45 AC. Este livro é um tratado de teoria da ética muito popular na época da Renascença. A primeira linha de Lorem Ipsum, "Lorem Ipsum dolor sit amet..." vem de uma linha na seção 1.10.32.
-
-            O trecho padrão original de Lorem Ipsum, usado desde o século XVI, está reproduzido abaixo para os interessados. Seções 1.10.32 e 1.10.33 de "de Finibus Bonorum et Malorum" de Cicero também foram reproduzidas abaixo em sua forma exata original, acompanhada das versões para o inglês da tradução feita por H. Rackham em 1914.
+            <h2>Jogo da velha</h2>
+           Jogo criado seguindo tutorial da pataforma da Digital Innovation One, utilizando HTML, CSS E JavaScript.
+           <a href="https://luizfii.github.io/JOGO-DA-VELHA/"
+           target="_blank">Click aqui e se divirta!</a>
           </div>
 
           <div class="card">
-            <div class="card-wrapper">
-              <h2>Linkedin</h2>
-              <p>Acompanhe minha carreira!</p>
-            </div>
+            <iframe src="https://www.youtube.com/embed/0LhY059JIQs" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>>
           </div>
         </div>
       </div>
       <div class="card-container">
         <div class="card">
-          <div class="card-wrapper">
-            <h2>Instagram</h2>
-            <p>Ou mais do meu dia a dia</p>
-          </div>
+          <iframe src="https://www.youtube.com/embed/j9hEbLyFTPk" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen></iframe>
         </div>
         <div class="card-text">
-            É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível. Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).
+          <h2>Jogo "Gennius" da memória de cores</h2>
+          Jogo criado seguindo tutorial da pataforma da Digital Innovation One, utilizando HTML, CSS E JavaScript. Ainda existem bugs que estou estudando para corrigir.
+          <a href="https://luizfii.github.io/jogo-da-mem-ria-de-cores/"
+          target="_blank">Click aqui e testa um pouco ;)</a>
         </div>
       </div>
     </main>
+  </div>
     <footer class="footer">
         Feito por Luiz Filipe para compor portifólio.
     </footer>
